methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:25: error: not found: value faireV
    faireV()
    ^